Added missing backslash

--- a/Article.tex
+++ b/Article.tex
@@ -49,7 +49,7 @@ To answer these questions, we imaged RecB at the single-molecule level, and quan
 % What is the main finding?
 Our results show that RecB forms long-lived complexes with DSBs (10 seconds). The dissociation of RecB from DNA is an intrinsic property of the complex, that does not depend on the amount of DNA damage, nor the following steps in the repair pathway. Moreover, we show that we can use RecB binding to DSBs as a marker to estimate the rate of damage formation. 
 % General sentence on what the article contributes
-This study provides a detailed quantitative insight into the interaction of RecBCD with DNA double-strand ends in \ecoli \emph{in vivo}, and into the bacterial response to DSBs induced by ciprofloxacin.
+This study provides a detailed quantitative insight into the interaction of RecBCD with DNA double-strand ends in \ecoli\ \emph{in vivo}, and into the bacterial response to DSBs induced by ciprofloxacin.
 
 \end{abstract}
 \begin{comment}
