--- a/Discussion.tex
+++ b/Discussion.tex
@@ -4,7 +4,9 @@
 In this work, we used imaging of RecB bound to DSBs to elucidate key aspects of RecBCD's processing of DSBs in vivo, focusing on how long RecBCD remains bound to DNA after DSB recognition and whether this binding time depends on the level of DNA damage. We found that in wild-type \ecoli, RecB stays bound to DSBs for 10 to 15 seconds on average (Table \ref{tab:fit_results}), independently of the concentration of ciprofloxacin. Additionally, we investigated whether RecA might play a role in promoting RecBCD dissociation from DNA. Imaging RecB in a \dreca\ mutant indicated that this is not the case, and that RecB dissociation occurs independently of RecA loading (Table \ref{tab:fit_mutants}). Interestingly, the \geneteneighty\ mutant had a reduced dissociation rate compared to wild-type cells, which highlights the importance of RecB's exonuclease activity in the process and the possibility that digestion of the unwound DNA strands is a pre-requisite for RecBCD dissociation.
 
 \subsection*{RecB can be used as a marker to quantify DSB formation \emph{in vivo}}
-Given RecBCD's high affinity for DSBs \emph{in vivo} and our ability to detect its binding to DSBs, the system is a useful tool to detect the presence of DSBs in \ecoli. Our experiments allowed us to estimate the number of recruitment of RecB to DSBs per hour, under different ciprofloxacin concentrations (Figure \ref{Fig:recruitment}A), and in the \dreca\ and \geneteneighty\ mutants (Figure \ref{Fig:recruitment}B). In the absence of ciprofloxacin, we estimated that 1.3 $\pm$ 1.1 RecB molecules are recruited to DSBs per hour. A previous study had estimated that 18\% of cells generated an endogenous DSB per cell cycle \cite{Sinha2018}. Considering the division time (20 min), this would correspond to a rate of $\sim$0.6 DSBs per hour, a lower value than our own estimate. This discrepancy could be due to the significant differences in the methods used to produce these estimates. In the wild-type, the general pathway for DSB repair suggests that RecBCD is recruited once per DSB (Figure \ref{Fig:pathways}). We can, therefore, reasonably expect that the observed number of RecB recruitments matches the number of DSBs formed (1 to 8 per hour, depending on ciprofloxacin concentration). In the \dreca\ and \geneteneighty\ mutants, however, the DSB repair pathway disruptions lead to multiple RecB recruitments per DSB.
+Given RecBCD's high affinity for DSBs \emph{in vivo} and our ability to detect its binding to DSBs, the system is a useful tool to detect the presence of DSBs in \ecoli. Our experiments allowed us to estimate the number of recruitment of RecB to DSBs per hour, under different ciprofloxacin concentrations (Figure \ref{Fig:recruitment}A), and in the \dreca\ and \geneteneighty\ mutants (Figure \ref{Fig:recruitment}B). In the absence of ciprofloxacin, we estimated that 1.3 $\pm$ 1.1 RecB molecules are recruited to DSBs per hour. A previous study had estimated that 18\% of cells generated an endogenous DSB per cell cycle \cite{Sinha2018}, with a division time of 20 min. This would correspond to a rate of $\sim$0.6 DSBs per hour, a lower value than our own estimate. This discrepancy could be due to the significant differences in the methods used to produce these estimates.
+
+In the wild-type, the general pathway for DSB repair suggests that RecBCD is recruited once per DSB (Figure \ref{Fig:pathways}). We can, therefore, reasonably expect that the observed number of RecB recruitments matches the number of DSBs formed (1 to 8 per hour, depending on ciprofloxacin concentration). In the \dreca\ and \geneteneighty\ mutants, however, the DSB repair pathway disruptions lead to multiple RecB recruitments per DSB.
 
 It should be noted that in some cases, ciprofloxacin is expected to produce double-sided DSBs, hence, leading to two RecB recruitments per break. We did not take this into account in our estimation of the DSB formation rate, as it has been previously suggested that the two sides of a DSB are kept in close proximity during DNA repair \cite{Vickridge2017,Keyamura2019}, and our imaging setup would not allow us to separate two RecB spots located close together. Indeed, our timelapse images of RecB binding seldom show two spots next to each other, further supporting the idea that we cannot resolve RecBCD binding to both sides of a DSB.
 
