--- a/Results.tex
+++ b/Results.tex
@@ -2,7 +2,7 @@
 \section*{Results}
 
 \subsection*{RecB forms long-lived spots when recruited to DSBs caused by cipro\-floxacin}
-To quantify RecB binding time to DSBs in live \ecoli, we used a Halo-tag fusion to the RecB subunit, conjugated to the JF549 fluorescent dye (Figure \ref{Fig:exp_principle}A). The fusion was previously fully characterised, ensuring specific one-to-one labelling of RecB molecules without adverse effects on the DNA repair process \cite{Lepore2019a,Lepore2023}. As a result of the large size and topological constraints of the bacterial chromosome, DSB-bound RecB diffuses very slowly \cite{Lepore2023}. Therefore, we applied the previously developed technique of localisation enhancement \cite{Yu2006, Elf2007}: since RecB is present at low copy numbers in \ecoli\ [$\sim$5 molecules per cell on average \cite{Lepore2019a,Kalita2024}], imaging live cells with a long exposure time (1 second) made fast-diffusing RecB molecules appear as weak homogeneous signal in the cell, while very slow-diffusing RecB molecules formed diffraction-limited spots (referred to throughout this article as RecB spots, Figures \ref{Fig:exp_principle}A and \ref{Fig:exp_principle}B). The complete absence of similar spots in cells expressing the free Halo-tag from a plasmid confirmed that these spots were specific to RecB (Supp. Figure \ref{SIFig:freehalo_image}). However, their exact nature needed to be confirmed. Although DSB-bound molecules are expected to diffuse very slowly, the RecBCD-Halo complex diffuses in the crowded and constrained environment of the cytoplasm, and might undergo transient interactions with DNA \cite{Lepore2023}, which could lead to RecB spots forming independently of DSB binding. To gain more insight into the nature of RecB spots, we increased the number of DSBs by adding ciprofloxacin to agar pads before imaging, and measured the lifetime of the spots by recording 100-second timelapse videos with 2-sec interval between frames at different positions in the sample, for a total time of 60 min following exposure to ciprofloxacin (Figure \ref{Fig:lifetimes}A). The 1-second exposure time was optimised to detect RecB spots with good signal-to-noise while limiting dye photobleaching and keeping a sufficient time resolution to determine spot lifetimes. Visual inspection of the timelapse data showed that RecB spot lifetime was hetereogenous, with a majority of spots being visible only for a few frames, and a small number persisting for longer times. These longer-lived spots became more frequent as the ciprofloxacin concentration increased. Inspecting background-subtracted intensity time-traces for single RecB spots showed that spots lost their intensity in a single step (Supp. Figure \ref{SIFig:SM_traces}), consistent with single-molecule photobleaching or transitioning from a very slowly diffusing state to a rapid one. Therefore, our imaging setup allowed us to visualise single, very slow diffusing RecB molecules, and to measure the time they spent in this diffusive state.
+To quantify RecB binding time to DSBs in live \ecoli, we used a Halo-tag fusion to the RecB subunit, conjugated to the JF549 fluorescent dye (Figure \ref{Fig:exp_principle}A). The fusion was previously fully characterised, ensuring specific one-to-one labelling of RecB molecules without adverse effects on the DNA repair process \cite{Lepore2019a,Lepore2023}. As a result of the large size and topological constraints of the bacterial chromosome, DSB-bound RecB diffuses very slowly \cite{Lepore2023}. Therefore, we applied the previously developed technique of localisation enhancement \cite{Yu2006, Elf2007}: since RecB is present at low copy numbers in \ecoli\ [$\sim$5 molecules per cell on average \cite{Lepore2019a,Kalita2024}], imaging live cells with a long exposure time (1 second) made fast-diffusing RecB molecules appear as weak homogeneous signal in the cell, while very slow-diffusing RecB molecules formed diffraction-limited spots (referred to throughout this article as RecB spots, Figures \ref{Fig:exp_principle}B and \ref{Fig:exp_principle}C). The complete absence of similar spots in cells expressing the free Halo-tag from a plasmid confirmed that these spots were specific to RecB (Supp. Figure \ref{SIFig:freehalo_image}). However, their exact nature needed to be confirmed. Although DSB-bound molecules are expected to diffuse very slowly, the RecBCD-Halo complex diffuses in the crowded and constrained environment of the cytoplasm, and might undergo transient interactions with DNA \cite{Lepore2023}, which could lead to RecB spots forming independently of DSB binding. To gain more insight into the nature of RecB spots, we increased the number of DSBs by adding ciprofloxacin to agar pads before imaging, and measured the lifetime of the spots by recording 100-second timelapse videos with 2-sec interval between frames at different positions in the sample, for a total time of 60 min following exposure to ciprofloxacin (Figure \ref{Fig:lifetimes}A). The 1-second exposure time was optimised to detect RecB spots with good signal-to-noise while limiting dye photobleaching and keeping a sufficient time resolution to determine spot lifetimes. Visual inspection of the timelapse data showed that RecB spot lifetime was hetereogenous, with a majority of spots being visible only for a few frames, and a small number persisting for longer times. These longer-lived spots became more frequent as the ciprofloxacin concentration increased. Inspecting background-subtracted intensity time-traces for single RecB spots showed that spots lost their intensity in a single step (Supp. Figure \ref{SIFig:SM_traces}), consistent with single-molecule photobleaching or transitioning from a very slowly diffusing state to a rapid one. Therefore, our imaging setup allowed us to visualise single, very slow diffusing RecB molecules, and to measure the time they spent in this diffusive state.
 
 \begin{figure}[htbp]
     \centering
@@ -58,7 +58,7 @@ Using the time-lapse data, we built histograms of RecB spot lifetimes at the dif
 % Gam
 To determine whether short- or long-lived spots resulted from RecB binding to DSBs, we measured RecB spot lifetime in the presence and absence of ciprofloxacin while over-expressing the Gam protein of phage $\lambda$ from a plasmid. The Gam protein was previously shown to bind to the RecBCD complex instead of DNA double-strand ends \cite{Wilkinson2016}, and its overexpression is therefore expected to abolish RecBCD binding to DSBs. Accordingly, cells that over-expressed Gam and were exposed to high ciprofloxacin (30 ng/ml) showed little elongation compared to cells that did not overexpress Gam (Supp. Figure \ref{SIFig:Gam_cell_length}), indicating that most cells did not induce the SOS response, as a result of the inability of the RecBCD-Gam complex to bind to DSBs and load RecA. The resulting RecB spot lifetimes showed a similar distribution to the one obtained in the absence of ciprofloxacin (Supp. Figure \ref{SIFig:Gam_RecB_lifetimes_vs_WT}). This was confirmed by fitting the histogram with our bi-exponential decay model (Figure \ref{Fig:lifetimes}C), which found a proportion of long-lived spots in the presence of 30 ng/ml ciprofloxacin (1.8 $\pm$ 0.9\%, Table \ref{tab:fit_results}) equivalent to wild-type cells that were not exposed to ciprofloxacin (1.8 $\pm$ 1\%). The residual amount of long-lived RecB spots in the presence of Gam could be a result of residual DSB binding despite the presence of Gam. This residual binding could also explain the small increase in cell length observed in Gam-expressing cells under 30 ng/ml ciprofloxacin (Supp. Figure \ref{SIFig:Gam_cell_length}). Since Gam overexpression prevents RecB binding to DSBs, and specifically caused long-lived spots to disappear, we conclude that long-lived spots correspond to RecB molecules bound to a DSB (and we will refer to them as DSB-bound RecB throughout this article). Given that under Gam overexpression, 95\% of RecB spots had a lifetime shorter than 10 sec (Figure \ref{Fig:lifetimes}D), we considered any spot with a lifetime over 10 sec to be a DSB-bound RecB molecule. The appearance of short-lived spots in the presence of Gam is likely a result of a combination of short-lived DNA interactions and slow, confined diffusion of the RecBCD-Gam-Halo complex (Supp. Note \ref{note:spurious_spots} and Supp. Figure \ref{SIFig:displacement_simul}). Therefore, spots that are visible for less than 10 seconds cannot be reliably assigned as either DNA-interacting or not.
 
-Using the Gam protein allowed us to identify DSB-bound RecB molecules as the longer-lived population in our bi-exponential fits of the RecB spot lifetime histograms. We determined that when it processes a DSB, RecB stays bound to it for 10 to 15 seconds on average, regardless of the ciprofloxacin concentration (Table \ref{tab:fit_results}). This is consistent with processing of DSBs by RecBCD taking place independently of other DSBs in the cell. In addition, to test whether the duration of ciprofloxacin exposure affected spot lifetimes, we performed separate fits at 15 min intervals for cells exposed to 30 ng/ml ciprofloxacin (Supp. Figure \ref{SIFig:RecB_lifetimes_timepoints}). The RecB spot lifetimes obtained were consistent with those reported in Table \ref{tab:fit_results} (10-15 sec for long-lived spots, and 1.5-2 sec for short-lived spots), indicating that RecB binding was not affected by the duration of ciprofloxacin exposure.
+Using the Gam protein allowed us to identify DSB-bound RecB molecules as the longer-lived population in our bi-exponential fits of the RecB spot lifetime histograms. We determined that when it processes a DSB, RecB stays bound to it for 10 to 15 seconds on average, regardless of the ciprofloxacin concentration (Table \ref{tab:fit_results}). This is consistent with processing of DSBs by RecBCD taking place independently of the number of DSBs in the cell. In addition, to test whether the duration of ciprofloxacin exposure affected spot lifetimes, we performed separate fits at 15 min intervals for cells exposed to 30 ng/ml ciprofloxacin (Supp. Figure \ref{SIFig:RecB_lifetimes_timepoints}). The RecB spot lifetimes obtained were consistent with those reported in Table \ref{tab:fit_results} (10-15 sec for long-lived spots, and 1.5-2 sec for short-lived spots), indicating that RecB binding was not affected by the duration of ciprofloxacin exposure.
 
 \subsection*{RecB dissociation time is independent of RecA loading}
 % RecB binding time in the mutants
