--- a/Article.tex
+++ b/Article.tex
@@ -39,23 +39,8 @@
 \maketitle
 
 \begin{abstract}
-% Scene setting
-Repairing DNA damage is of primary importance for all living organisms. DNA double-strand breaks (DSBs) are one of the most serious types of DNA damage, as they lead to loss of genetic information and death when not repaired. In \ecoli, they are recognised and processed by the RecBCD complex, which initiates repair by homologous recombination.
-% What is our main question?
-Although the repair dynamics downstream of RecBCD has been well characterised, it is still unclear how long this complex stays attached to DNA and what triggers its dissociation \emph{in vivo}.
-% What experimental setup did we use?
-% What data did we produce?
-To answer these questions, we imaged RecB at the single-molecule level, and quantified its dynamic behaviour in bacterial cells exposed to ciprofloxacin, an antibiotic that induces DSBs.
-% What is the main finding?
-Our results show that RecB forms long-lived complexes with DSBs (10 seconds). The dissociation of RecB from DNA is an intrinsic property of the complex, that does not depend on the amount of DNA damage, nor the following steps in the repair pathway. Moreover, we show that we can use RecB binding to DSBs as a marker to estimate the rate of damage formation. 
-% General sentence on what the article contributes
-This study provides a detailed quantitative insight into the interaction of RecBCD with DNA double-strand ends in \ecoli\ \emph{in vivo}, and into the bacterial response to DSBs induced by ciprofloxacin.
-
+    Repairing DNA damage is of primary importance for all living organisms. DNA double-strand breaks (DSBs) are one of the most serious types of DNA damage, as they lead to loss of genetic information and death when not repaired. In \ecoli, they are recognised and processed by the RecBCD complex, which initiates repair by homologous recombination. Although the repair dynamics downstream of RecBCD has been well characterised, it is still unclear how long this complex stays attached to DNA and what triggers its dissociation \emph{in vivo}. To answer these questions, we imaged RecB at the single-molecule level, and quantified its dynamic behaviour in bacterial cells exposed to ciprofloxacin, an antibiotic that induces DSBs. Our results show that RecB forms long-lived complexes with DSBs (10 seconds), and that its dissociation from DNA is an intrinsic property of the complex, that does not depend on the amount of DNA damage, nor the following steps in the repair pathway. Moreover, we show that we can use RecB binding to DSBs as a marker to estimate the rate of damage formation. This study provides a detailed quantitative insight into the interaction of RecBCD with DNA double-strand ends in \ecoli\ \emph{in vivo}, and into the bacterial response to DSBs induced by ciprofloxacin.
 \end{abstract}
-\begin{comment}
-******GENERAL COMMENTS: In vivo and in vitro do not take a dash between in and vivo; this needs to be corrected in all the ms. ALSO, there must be a space before the parenthesis for all the references. It also needs to be corrected for the whole ms. 
-WHEN referring to RecB binding to DNA, we need to clarify that we are looking ONLY at DSB binding (short interactions are also DAN binding but not relevant to us); there are still places in the ms where this is not clear.REGARDINDRECA: we use filament but there might be confusion between the nucleoprotein filament (a single structure) and bundles: more likely what we see. I tried to make it clear that we use filament in a "bundle"sense for this paper, but we need to check if that works*******
-\end{comment}
 
 \begin{keywords}
     DNA repair | RecBCD | Imaging | \emph{in vivo}
