--- a/Introduction.tex
+++ b/Introduction.tex
@@ -9,10 +9,10 @@ A common source of DSBs in \ecoli\ is the collision of the replication fork with
 \ecoli\ cells might also experience DSBs from exo\-genous sources, such as anti\-biotics. Ciprofloxacin is an antibiotic of the fluoro\-quinolones family, which causes DSBs. In \ecoli, it does so by binding covalently to the topoisomerase II DNA gyrase (and with lower affinity to topoisomerase IV), and trapping it in a DNA-bound conformation \cite{Kohanski2010}. The exact mechanism through which DSBs are created is still unclear, but ciprofloxacin has been suggested to cause replication-dependent and independent DSBs \cite{Ojkic2020}. Since poisoned gyrase is closely bound to DNA, it is likely to cause replication fork collisions \cite{Wentzell2000, Drlica2008}, and the subsequent repair of a chicken foot structure. Furthermore, the ciprofloxacin-poisoned gyrase is trapped in the "open" stage of its catalytic cycle, where it holds together two disjointed DNA ends. Therefore, after gyrase removal [through a process that involves ExoVII nuclease \cite{Huang2021}], it can be reasonably expected that a DSB is formed independently of DNA replication \cite{Zhao2006}.
 
 % General response to DNA damage (SOS and nucleoid compaction)
-DSB repair is the first step of a general response to DNA damage known as the SOS response \cite{Baharoglu2014}. The formation of the RecA nucleoprotein filament triggers the auto-proteolysis of the LexA transcriptional repressor, which results in the activation of the genes of the SOS regulon. Among those are RecA itself, inhibitors of cell division such as SulA, and the SMC (structural maintenance of chromosomes)-like protein RecN. As a result, the cells elongate \cite{Bos2015}, and their DNA is compacted at the cell centre \cite{Odsbu2014}.
+DSB repair is the first step of a general response to DNA damage known as the SOS response \cite{Baharoglu2014}. The formation of the RecA nucleoprotein filament triggers the auto-proteolysis of the LexA transcriptional repressor, which results in the activation of the genes of the SOS regulon. Among those are RecA itself, inhibitors of cell division such as SulA, and the SMC (Structural Maintenance of Chromosomes)-like protein RecN. As a result, the cells elongate \cite{Bos2015}, and their DNA is compacted at the cell centre \cite{Odsbu2014}.
 
 % RecB/RecA mutants
-Mutations in proteins of the repair pathway have varying effects on the cell's ability to repair DSBs. Cells that are \emph{recA}-deficient (\dreca) are entirely unable to repair DSBs through homologous recombination, and the prolonged action of RecBCD on the DNA results in the digestion of large parts of the chromosome \cite{Horii1968, Chow2007}. \emph{recA}-deficient cells are, however, capable of processing DSBs arising from fork reversal, thanks to RecBCD's exonuclease activity \cite{Seigneur1998, Michel2001}. The $D_{1080} \rightarrow A$ point mutation in the RecB subunit of the RecBCD complex (\teneighty) abolishes RecB's nuclease activity, as well as its ability to load the RecA protein on DNA \cite{Yu1998, Wang2000}. The other activities of the complex (DSB recognition, DNA unwinding, Chi-recognition) are unaffected \cite{Anderson1999}. Despite the loss of its RecA loading activity, the \geneteneighty\ mutant is still able to repair DSBs. To do so, the \teneighty CD complex unwinds DNA at the break without degrading it, and the RecJ exonuclease degrades the 5' ssDNA. Finally, the RecFOR complex displaces SSB and loads RecA, allowing for homologous recombination to occur \cite{Ivancic-Bace_2003}.
+Mutations in proteins of the repair pathway have varying effects on the cell's ability to repair DSBs. Cells that are \emph{recA}-deficient (\dreca) are entirely unable to repair DSBs through homologous recombination, and the prolonged action of RecBCD on the DNA results in the digestion of large parts of the chromosome \cite{Horii1968, Chow2007}. \emph{recA}-deficient cells are, however, capable of processing DSBs arising from fork reversal, thanks to RecBCD's exonuclease activity \cite{Seigneur1998, Michel2001}. The $D_{1080} \rightarrow A$ point mutation in the RecB subunit of the RecBCD complex (\teneighty) abolishes RecB's nuclease activity, as well as its ability to load the RecA protein on DNA \cite{Yu1998, Wang2000}. The other activities of the complex (DSB recognition, DNA unwinding, Chi-recognition) are unaffected \cite{Anderson1999}. Despite the loss of its RecA loading activity, the \geneteneighty\ mutant is still able to repair DSBs. To do so, the \teneighty CD complex unwinds DNA at the break without degrading it, and the RecJ exonuclease degrades the 5' ssDNA. Finally, the RecFOR complex loads RecA, allowing for homologous recombination to occur \cite{Ivancic-Bace_2003}.
 
 % Previous microscopy studies of DSB repair
 Previous microscopy studies have shed light on different aspects of DSB repair by RecBCD. Several \emph{in vitro} studies have quantified the rate of DNA unwinding by RecBCD \cite{Spies2003,Liu2013}, as well as the growth rate of RecA filaments \cite{Joo2006,Galletto2006,Handa2009} and the mechanism of homology search \cite{Forget2012,Ragunathan2012}. Complimentary to the \emph{in vitro} work, \emph{in vivo} studies have provided insight into DNA end resection by RecBCD \cite{Wiktor2018}, confirming its translocation speed and high processivity. More recently, we investigated RecB mobility \emph{in vivo} at the single-molecule level \cite{Lepore2023}, finding that RecB's engagement in repair initiation is proportional to the level of DNA damage and that its interactions with DNA are consistent with its role in initiating the repair process. The spatial organisation of RecA during DSB repair has been extensively characterised. Studies reported the presence of RecA foci \cite{Renzette2005,Renzette2007,Centore2007,Amarh2018}, filaments \cite{Kidane2005}, or bundles of filaments \cite{Lesterlin2013,Ghodke2019}. The homology search and pairing processes were also observed \emph{in vivo}, showing that DSBs are brought to the centre of the cell during the repair process \cite{Badrinarayanan2015,Wiktor2021}. Our previous observations \cite{Lepore2023} highlighted how the coordination of all RecBCD activities facilitated rapid and efficient repair. Nevertheless, several important aspects of RecBCD's processing of DSBs \emph{in vivo} remain to be clarified: how long does RecBCD stay bound to DNA after recognising a DSB? Does the binding time change under different levels of DNA damage? Does RecA play a role in triggering RecBCD dissociation from DNA? These open questions are fundamental to the complete understanding of DSB repair in \ecoli.
