Added figure numbers and cleaned up

--- a/Notebooks/Ciprofloxacin/RecA.ipynb
+++ b/Notebooks/Ciprofloxacin/RecA.ipynb
@@ -95,7 +95,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evolution of RecA structure proportions over time"
+    "## Evolution of RecA structure proportions over time\n",
+    "\n",
+    "##### Supp. Figure 12"
    ]
   },
   {
@@ -141,7 +143,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Talissman",
+   "display_name": "pyberries_dev",
    "language": "python",
    "name": "python3"
   },
