--- a/Notebooks/Ciprofloxacin/SM_traces.ipynb
+++ b/Notebooks/Ciprofloxacin/SM_traces.ipynb
@@ -40,6 +40,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Supp. Figure 5"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
