Add a title page for the SI

--- a/Article.tex
+++ b/Article.tex
@@ -80,6 +80,19 @@
 \onecolumn
 \newpage
 
+\begin{center}
+    \huge
+    \vspace*{9em}
+    \textbf{Supplementary information}\\
+    \vspace*{2em}
+    \textbf{Single molecule imaging of RecB \emph{in vivo} reveals dynamics of DNA Double Strand Break repair in \emph{Escherichia coli}}\\
+    \vspace*{2em}
+    \Large
+    Daniel Thédié, Alessia Lepore, Lorna McLaren and Meriem El Karoui
+\end{center}
+
+\newpage
+
 \input{Supplementary}
 
 \end{document}
