--- a/Methods.tex
+++ b/Methods.tex
@@ -16,16 +16,16 @@ When relevant, cellular DNA was labelled by adding Sytox Green (Invitrogen, cata
 \subsubsection*{Dye removal}
 The same procedure was followed to remove unbound JF549 and Sytox Green dye. The cells were centrifuged for 3 min at 8000 rpm, the supernatant discarded, and the pellet resuspended in 1 mL of fresh medium and transferred to a new tube to avoid the dyes sticking to the plastic of the tube. This procedure was repeated 3 times to fully remove unbound dye. The cells were finally resuspended in 200 µL medium.
 \subsubsection*{Gam overexpression}
-For experiments where Gam was over-expressed, arabinose was added to the cells during the labelling step, at 1\% (w./v.) final concentration. Arabinose (at the same concentration) was also added to the medium for subsequent washes, and in the agarose-pad to maintain exposure during imaging.
+For experiments where Gam was over-expressed, arabinose was added to the cells during the labelling step, at 1\% (w/v) final concentration. Arabinose (at the same concentration) was also added to the medium for subsequent washes, and in the agarose-pad to maintain exposure during imaging.
 \subsubsection*{Sample preparation}
-Agarose-pads were prepared by dissolving 2\% (w./v.) agarose in culture medium. In experiments with ciprofloxacin, the antibiotic was added to the agarose-pad at the desired final concentration. After the dye removal step, 5 µL of cells were added on the agarose-pad, and left to settle for 10 min at 37\celsius\ in the dark before imaging.
+Agarose-pads were prepared by dissolving 2\% (w/v) agarose in culture medium. In experiments with ciprofloxacin, the antibiotic was added to the agarose-pad at the desired final concentration. After the dye removal step, 5 µL of cells were added on the agarose-pad, and left to settle for 10 min at 37\celsius\ in the dark before imaging.
 
 \subsection*{Microscopy}
 \subsubsection*{Microscope set-up}
 Imaging was performed using an inverted microscope (Nikon Ti-E) equipped with a 100X TIRF Nikon objective (NA 1.49, oil immersion) and a 1.5X Nikon magnification lens (pixel size = 107 nm). Fluorescence excitation was achieved using 488- and 561-nm lasers (Coherent OBIS) in HILO (Highly Inclined Laminar Optical sheet) configuration. Excitation light and fluorescence emission were separated using a dual-wavelength dichroic filter (TRF59904, Chroma), and the fluorescence signal was detected on an EMCCD (Electron Multiplying Charge-Coupled Device) camera (iXion Ultra 897, Andor). The hardware was controlled and images were saved using MetaMorph (Molecular Devices; v7.8.13.0). The HILO configuration was established using the iLas variable angle TIRF control window (Gattaca), with an angle of 57\degree. All experiments were performed at 37\celsius, using an Okolab microscope cage incubator equipped with dark panels.
 
 \subsubsection*{Data acquisition}
-For each sample, a Metamorph journal was used to acquire images on 40 different positions, each separated by 150 µm. The full camera sensor (512x512 pixels) was used. Acquisition parameters are described in Supp. Table \ref{SItab:acquisition_channels}. The prolonged imaging of the RecB-Halo fusion was only possible thanks to the exceptional photostability of the JF549 dye, which displayed slow photobleaching and no blinking (Supp. Note \ref{note:dye_bleaching} and Supp. Fig. \ref{SIFig:dye_bleaching}).
+For each sample, a Metamorph journal was used to acquire images on 40 different positions, each separated by 150 µm. The full camera sensor (512x512 pixels) was used. Acquisition parameters are described in Supp. Table \ref{SItab:acquisition_channels}. Brightfield images were acquired in all experiments, as well as two fluorescence channels: JF549 (RecB) and either SYFP2 (RecA), or Sytox Green (nucleoid). At each position, 50 images were acquired at 2-second intervals for RecB and RecA, or a single image was acquired for the nucleoid. The prolonged imaging of the RecB-Halo fusion was only possible thanks to the exceptional photostability of the JF549 dye, which displayed slow photobleaching and no blinking (Supp. Note \ref{note:dye_bleaching} and Supp. Fig. \ref{SIFig:dye_bleaching}).
 
 \subsection*{Data analysis}
 The general data analysis workflow is described in Supp. Figure \ref{SIFig:analysis_workflow}. In brief, after acquisition, the raw microscopy images were stored in .tif format on a dedicated Omero server (OME). They were directly accessed by the BACMMAN ImageJ plugin \cite{Ollion2019}, which performed image processing tasks such as denoising of fluorescence images, cell segmentation (including manual curation of incorrectly segmented cells), nucleoid segmentation, and fluorescent spot detection. Measurement tables in CSV format were exported from BACMMAN and loaded in Jupyter Notebooks using the \href{https://gitlab.com/MEKlab/pyberries}{PyBerries package} (version 0.2.25) in Python (version 3.11). The data tables were manipulated using PyBerries and the pandas library (version 2.0.2). Figures were generated in Jupyter Notebooks using the Seaborn library (version 0.13.2). Figures that contained several panels were assembled in Inkscape (version 1.3.2).
