--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -82,6 +82,15 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \label{SItab:acquisition_channels}
 \end{supptable}
 
+% Acquisition pattern
+\begin{suppfigure*}[htbp]
+    \begin{center}
+    \includegraphics[width=.5\textwidth]{SI_Figures/Acquisition_pattern.pdf}
+    \end{center}
+    \caption{Acquisition patterns for microscopy experiments. \textbf{(A)} Acquisition pattern for experiments with brightfield, RecB (JF549) and RecA (SYFP2) channels. \textbf{(B)} Acquisition pattern for experiments with brightfield, RecB (JF549) and Nucleoid (Sytox Green) channels.}
+    \label{SIFig:acquisition_pattern}
+\end{suppfigure*}
+
 % Photobleaching figure (curves + fitted rates)
 \begin{suppfigure*}[htbp]
     \begin{center}
