--- a/Article.tex
+++ b/Article.tex
@@ -63,7 +63,7 @@
 \end{funding}
 
 \begin{acknowledgements}
-    We would like to thank Prof. David Leach for insightful discussions on DNA repair in \emph{E. coli}. We thank Mark Dillingham for sharing his knowledge on the biochemistry of RecBCD. We thank Johan Elf for kindly sharing the RecA-SYFP2 tandem fusion strain. We thank Jean Ollion for the development of BACMMAN and its associated tools, as well as the image analysis support he provided. We thank Elise Darmon for discussing results, and reviewing the manuscript.
+    We would like to thank Prof. David Leach for insightful discussions on DNA repair in \emph{E. coli}. We thank Prof. Mark Dillingham for sharing his knowledge on the biochemistry of RecBCD. We thank Prof. Johan Elf for kindly sharing the RecA-SYFP2 tandem fusion strain. We thank Dr. Jean Ollion for the development of BACMMAN and its associated tools, as well as the image analysis support he provided. We thank Elise Darmon for discussing results, and reviewing the manuscript.
 \end{acknowledgements}
 
 \begin{contributions}
