Minor caption edit

--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -123,7 +123,7 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \begin{center}
     \includegraphics[width=.5\linewidth]{SI_Figures/Free_Halo_image.png}
     \end{center}
-    \caption{Representative fluorescence image (1 second exposure time) of freely diffusing Halo-tag expressed from a pBAD plasmid in MG1655 \textit{E. coli} cells.}
+    \caption{Representative fluorescence image (1 second exposure time) of freely diffusing Halo-tag expressed from a pBAD plasmid (induced with 1\% w/v arabinose) in MG1655 \textit{E. coli} cells.}
     \label{SIFig:freehalo_image}
 \end{suppfigure*}
 
