Converted Fig3 bar graphs to violins

--- a/Results.tex
+++ b/Results.tex
@@ -13,7 +13,7 @@ To quantify RecB binding time to DSBs in live \ecoli, we used a Halo-tag fusion 
 
 \subsection*{RecB forms long-lived complexes with DSBs}
 % RecB spot lifetime
-Using the time-lapse data, we built histograms of RecB spot lifetimes at the different ciprofloxacin concentrations (Figure \ref{Fig:lifetimes}B). In the absence of ciprofloxacin, the majority of spots lasted less than 2 seconds. Under increasing ciprofloxacin concentrations, the distribution showed a clear shift towards longer-lived spots, with the histogram at 20 and 30 ng/ml ciprofloxacin displaying a clear "tail" of long-lived events ($>$ 10 sec). Fitting these histograms with a mono-exponential decay model ($y = a.e^{-k.t}$) did not match the experimental data accurately (Supp. Figure \ref{SIFig:monoexp_fits}). In particular, it did not account for the tail of longer-lived spots that formed at high ciprofloxacin concentrations. Fitting with a bi-exponential decay model ($y = a_1.e^{-k_1.t} + a_2.e^{-k_2.t}$) accounted better for the longer-lived RecB spots (Figure \ref{Fig:lifetimes}B). We made sure that the better fit was not solely due to the increased number of fit parameters by computing Akaike's Information Criteria (AIC). The average AIC for the mono-exponential fit was -290, against -348 for the bi-exponential fit. The lower AIC value for the bi-exponential fit confirmed that the additional parameters helped describe the data better. The bi-exponential fit outlined two populations of spots with different lifetimes: a short-lived one, with average lifetimes ranging from 1.4 to 1.7 sec; and a longer-lived one, with average lifetimes ranging from 10 to 14 sec (Table \ref{tab:fit_results}). Even though the short-lived spots always represented a majority of events (over 90\% of the spots), the proportion of long-lived spots increased under higher ciprofloxacin exposure (from 1.4 $\pm$ 0.3\% at 3 ng/ml ciprofloxacin to 5.5 $\pm$ 1.4\% at 30 ng/ml ciprofloxacin).
+Using the time-lapse data, we built histograms of RecB spot lifetimes at the different ciprofloxacin concentrations (Figure \ref{Fig:lifetimes}B). In the absence of ciprofloxacin, the majority of spots lasted less than 2 seconds. Under increasing ciprofloxacin concentrations, the distribution showed a clear shift towards longer-lived spots, with the histogram at 20 and 30 ng/ml ciprofloxacin displaying a clear "tail" of long-lived events ($>$ 10 sec). Fitting these histograms with a mono-exponential decay model ($y = a.e^{-k.t}$) did not match the experimental data accurately (Supp. Figure \ref{SIFig:monoexp_fits}). In particular, it did not account for the tail of longer-lived spots that formed at high ciprofloxacin concentrations. Fitting with a bi-exponential decay model ($y = a_1.e^{-k_1.t} + a_2.e^{-k_2.t}$) accounted better for the longer-lived RecB spots (Figure \ref{Fig:lifetimes}B). We made sure that the better fit was not solely due to the increased number of fit parameters by computing Akaike's Information Criteria (AIC). The average AIC values for each ciprofloxacin concentration (Supp. Table \ref{SItab:AIC}) confirmed that the additional parameters helped describe the data better. The bi-exponential fit outlined two populations of spots with different lifetimes: a short-lived one, with average lifetimes ranging from 1.4 to 1.7 sec; and a longer-lived one, with average lifetimes ranging from 10 to 14 sec (Table \ref{tab:fit_results}). Even though the short-lived spots always represented a majority of events (over 90\% of the spots), the proportion of long-lived spots increased under higher ciprofloxacin exposure (from 1.4 $\pm$ 0.3\% at 3 ng/ml ciprofloxacin to 5.5 $\pm$ 1.4\% at 30 ng/ml ciprofloxacin).
 
 \begin{figure*}[htbp]
     \centering
@@ -95,7 +95,7 @@ Since the duration of the RecB-DSB interaction was unaffected by the amount of D
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=.4\textwidth]{Figures/Fig3_RecB_recruitment.pdf}
-    \caption{Recruitment of RecB to DSBs. \textbf{(A)} Recruitment rate of RecB to DSBs per cell at different ciprofloxacin concentrations. Black points show averages for individual datasets, and bars the median value between them. \ncells{66,764}. \nspots{170,138}. \textbf{(B)} Recruitment rate of RecB to DSBs per cell for the \dreca\ and \geneteneighty\ mutants. Black points show averages for individual datasets, and bars the median value between them. \ncells{23,540}. \nspots{99,891}.}
+    \caption{Recruitment of RecB to DSBs. \textbf{(A)} Recruitment rate of RecB to DSBs per cell at different ciprofloxacin concentrations. \ncells{66,764}. \nspots{170,138}. \textbf{(B)} Recruitment rate of RecB to DSBs per cell for the \dreca\ and \geneteneighty\ mutants. \ncells{23,540}. \nspots{99,891}. For both panels, violin plots show single-cell distributions, box plots show the median and interquartile range. Statistically significant differences (Tukey's HSD test) are shown as follows: ns, non-significant; *, p<0.05; **, p<0.01; ***, p<0.001; ****, p<0.0001}
     \label{Fig:recruitment}
 \end{figure}
 
