Added SI table for AIC values

--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -145,6 +145,24 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \label{SIFig:monoexp_fits}
 \end{suppfigure*}
 
+% Akaike's Information Criteria (AIC) table
+\begin{supptable}[htbp]
+    \centering
+    \caption{Akaike's Information Criteria (AIC) for mono- and bi-exponential decay fits of the RecB spot lifetime histograms. Lower values (in bold) show the most relevant model. Values are given as the mean $\pm$ standard deviation on all datasets. Diff. shows the difference in mean AIC value between the two models (negative values are in favour of the bi-exponential model).}
+    \begin{tabular}{lllllll}
+        \toprule
+        Ciprofloxacin concentration (ng/ml) & AIC (mono-exponential fit) & AIC (bi-exponential fit) & Diff. \\
+        \midrule
+        0 ng/ml & -258.5 $\pm$ 117.0 & \textbf{-284.5} $\pm$ 140.1 & -26 \\
+        3 ng/ml & -307.0 $\pm$ 36.6 & \textbf{-322.2} $\pm$ 42.3 & -15 \\
+        10 ng/ml & -290.4 $\pm$ 48.3 & \textbf{-340.2} $\pm$ 75.3 & -50 \\
+        20 ng/ml & -286.4 $\pm$ 45.0 & \textbf{-349.6} $\pm$ 49.1 & -63 \\
+        30 ng/ml & -303.5 $\pm$ 40.3 & \textbf{-387.5} $\pm$ 62.0 & -84 \\
+        \bottomrule
+    \end{tabular}
+    \label{SItab:AIC}
+\end{supptable}
+
 % Cell length under Gam over-expression, 0 and 30 ng/mL cipro
 \begin{suppfigure*}[htbp]
     \begin{center}
