Moved Fig 2D to SI (proba of RecB spot being DSB bound)

--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -181,6 +181,15 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \label{SIFig:Gam_RecB_lifetimes_vs_WT}
 \end{suppfigure*}
 
+% Probability for a spot to be DSB-bound depending on its lifetime
+\begin{suppfigure*}[htbp]
+    \begin{center}
+    \includegraphics[width=.4\textwidth]{SI_Figures/Proba_DSB_bound.pdf}
+    \end{center}
+    \caption{Histogram of expected displacements for a molecule diffusing at 1 \ums\ over a 500 ms frame time.}
+    \label{SIFig:proba_DSB_bound}
+\end{suppfigure*}
+
 % Displacements simulation
 \begin{suppfigure*}[htbp]
     \begin{center}
